Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114864

qtbase build error on macos 14 Sonoma

XMLWordPrintable

    • macOS
    • 2736e908e (dev), 3f156987a (6.5), fcf1dc163 (6.6)

      qtbase build fails with error in switch case at qdarwinpermissionplugin_calendar.

      agent:2023/06/23 05:24:55 build.go:402: FAILED: src/corelib/CMakeFiles/QDarwinCalendarPermissionPlugin.dir/platform/darwin/qdarwinpermissionplugin_calendar.mm.o 
      agent:2023/06/23 05:24:55 build.go:402: /Applications/Xcode15_beta.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -DGL_SILENCE_DEPRECATION -DQT_CORE_LIB -DQT_DARWIN_PERMISSION_PLUGIN=Calendar -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_NO_AS_CONST -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_PLUGIN -DQT_STATICPLUGIN -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/Users/qt/work/qt/qtbase_build/src/corelib/QDarwinCalendarPermissionPlugin_autogen/include -I/Users/qt/work/qt/qtbase/src/corelib -I/Users/qt/work/qt/qtbase_build/src/corelib -I/Users/qt/work/qt/qtbase_build/include -I/Users/qt/work/qt/qtbase_build/include/QtCore -I/Users/qt/work/qt/qtbase_build/lib/QtCore.framework/Headers -I/Users/qt/work/qt/qtbase/mkspecs/macx-clang -I/Users/qt/work/qt/qtbase_build/include/QtCore/6.6.0 -I/Users/qt/work/qt/qtbase_build/include/QtCore/6.6.0/QtCore -x objective-c++ -g -DNDEBUG -O3 -arch x86_64 -arch arm64 -isysroot /Applications/Xcode15_beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX14.0.sdk -mmacosx-version-min=11.0 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -F/Users/qt/work/qt/qtbase_build/lib  -Wall -Wextra -fno-exceptions -Werror "-Wno-error=#warnings" -Wno-error=deprecated-declarations -fapplication-extension -fno-objc-msgsend-selector-stubs -std=c++17 -MD -MT src/corelib/CMakeFiles/QDarwinCalendarPermissionPlugin.dir/platform/darwin/qdarwinpermissionplugin_calendar.mm.o -MF src/corelib/CMakeFiles/QDarwinCalendarPermissionPlugin.dir/platform/darwin/qdarwinpermissionplugin_calendar.mm.o.d -o src/corelib/CMakeFiles/QDarwinCalendarPermissionPlugin.dir/platform/darwin/qdarwinpermissionplugin_calendar.mm.o -c /Users/qt/work/qt/qtbase/src/corelib/platform/darwin/qdarwinpermissionplugin_calendar.mm
      agent:2023/06/23 05:24:55 build.go:402: In file included from /Users/qt/work/qt/qtbase/src/corelib/platform/darwin/qdarwinpermissionplugin_calendar.mm:4:
      agent:2023/06/23 05:24:55 build.go:402: /Users/qt/work/qt/qtbase/src/corelib/platform/darwin/qdarwinpermissionplugin_p_p.h:77:13: error: enumeration value 'EKAuthorizationStatusWriteOnly' not handled in switch [-Werror,-Wswitch]
      agent:2023/06/23 05:24:55 build.go:402:     switch (status) {
      agent:2023/06/23 05:24:55 build.go:402:             ^~~~~~
      agent:2023/06/23 05:24:55 build.go:402: /Users/qt/work/qt/qtbase/src/corelib/platform/darwin/qdarwinpermissionplugin_calendar.mm:24:12: note: in instantiation of function template specialization '(anonymous namespace)::nativeStatusToQtStatus<EKAuthorizationStatus>' requested here
      agent:2023/06/23 05:24:55 build.go:402:     return nativeStatusToQtStatus(status);
      agent:2023/06/23 05:24:55 build.go:402:            ^
      agent:2023/06/23 05:24:55 build.go:402: /Users/qt/work/qt/qtbase/src/corelib/platform/darwin/qdarwinpermissionplugin_p_p.h:77:13: note: add missing switch cases
      agent:2023/06/23 05:24:55 build.go:402:     switch (status) {
      agent:2023/06/23 05:24:55 build.go:402:             ^
      agent:2023/06/23 05:24:55 build.go:402: 1 error generated.
       

      http://10.212.0.121:10303/coin/api/log/qt/qtbase/6540b274c80882c4f8892e8d566ad49be76e7acd/MacOSMacOS_14x86_64MacOSMacOS_14x86_64-arm64Clangqtci-macos-14-x86_64-101-bad019Sccache_UseConfigure_WarningsAreErrors/06ce6d3cee0ab414d1cb98a37dd88cd1aeb69924/build_1687497171/log.txt.gz

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            akpietik Aku Pietikäinen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes