permissions: Handle EKAuthorizationStatusWriteOnly on macOS 14/iOS 17

For now we do not have a QCalendarPermission::AccessMode::WriteOnly,
so we have to report Qt::PermissionStatus::Denied.

Fixes: QTBUG-114864
Change-Id: I94e92912ef4c24adb524ccf2cf28553115d6781b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit 2736e908e9da05ed8a03a8f163237ec68606e1a3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>